--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2980,7 +2980,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
+			background-color: #87947f;
 			color: #d3d4e4;
 		}
 
