--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2980,7 +2980,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style6 {
-			background-color: #ffffff;
+			background-color: #87947f;
 		}
 
 		.wrapper.style3 {
